# ChanZuckerbergInterview

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
chanzuck/: _version.py  cli.py
chanzuck/cli_helpers/: describe.py  segment.py  stats.py  visualize.py
chanzuck/segment/: nuclei_segmentation.py
chanzuck/spatial/: stats.py  visualize.py
chanzuck/utils/: dataloader.py  describe.py  image_pyramider.py
chanzuck/visualize/: image_visualizer.py
tasks/: description.txt  profiling.txt  task1.py  task2.py
tests/: conftest.py  test_cli.py  test_describing.py
