# Taken from iohubs repo to conformto style
[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
write_to = "chanzuck/_version.py"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

# Below is generated mostly by GPT
[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]  # E: pycodestyle, F: pyflakes, I: isort, B: bugbear, UP: upgrade checks
ignore = ["E203", "E501"]  # Optional: E203 conflicts with Black

[project]
name = "chanzuck"
version = "0.1.0"
description = "Library for interacting with OME-based datasets"
authors = [{ name = "Nate Grant", email = "nathangrant456@gmail.com" }]
readme = "README.md"
license = { text = "AB3D" }
dependencies = [
  "iohub>=0.2.0",
  "scikit-learn>=1.2,<2.0"
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "ruff", "pre-commit"]
